# geo-num-2016

./: .gitignore  README.md  typedefs.h
SimpleViewer/: SimpleViewer.h  phong.frag.glsl  phong.vert.glsl
TP1/: CMakeLists.txt  TP1.h  main.cpp  todo.h
TP1/data/: simple.bcv
TP1/plots/: plot.gnu  plot.py
TP2/: CMakeLists.txt  TP2.h  main.cpp  todo.h
TP2/plots/: plot.py
TP3/: CMakeLists.txt  TP3.h  main.cpp  todo.h
TP3/data/: camel.bspline  circle.nurbs  simple.bspline  spiral.bspline
TP3/plots/: plot.py
TP4/: CMakeLists.txt  TP4.h  main.cpp  todo.h
TP4/plots/: plot.py
TP5/: CMakeLists.txt  TP5.h  main.cpp  todo.h
TP5/data/: bone.data  bunny.data  simple.data
TP5/plots/: .gitignore  plot.py
TP6/: CMakeLists.txt  TP6.h  main.cpp  todo.h
TP6/cmake/: .gitignore  CMakeLists2.txt
TP7/: CMakeLists.txt  TP7.h  main.cpp  todo.h
TP7/data/: simple.bspline  torus.bspline
TP7/plots/: plot.py
TP8/: CMakeLists.txt  TP8.h  main.cpp  todo.h
TP8/data/: cylinder.net  grid.net  torus.net
TP9/: CMakeLists.txt  TP9.h  main.cpp  todo.h
TP9/plots/: viewsurface.py
glfw-3.1.2/: CMakeLists.txt
